# haskell-warmup

./: compareTriplets.hs  haskell-warmup.cabal
solutions/: aVeryBigSum.hs  compareTriplets.hs
